# meta-agent

./: AGENT.md  Cargo.toml  README.md
src/: agent_pool.rs  dispatcher.rs  health.rs  lib.rs  progress.rs  simulation.rs  task_queue.rs  work_graph.rs
