[package]
name = "meta-agent"
version = "0.1.0"
edition = "2021"
description = "A meta-agent coordinator that dispatches tasks to agents based on capabilities, load, and dependency graphs"
license = "MIT"

[dependencies]
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
priority-queue = "2"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
